[tool.poetry]
name = "poetrycrash"
version = "0.1.0"
description = ""
authors = ["Ivan Ryazanov <satviewer@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.1"
scipy = "^1.6"
matplotlib = "^3.3"
requests = "^2.20"
gmsh = "^4.7"
pygetdp = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
